# ai-agents-examples

./: README.md  pyproject.toml  requirements.txt
examples/company_researcher/interfaces/: router.py  schemas.py
examples/mcp/multi_mcp/: api.py  client.py
examples/mcp/multi_server_http/: __main__.py
examples/mcp/puppeteer_stdio/: __main__.py  client.py
src/application/ports/: __init__.py  agent_service.py
src/domain/models/: agent.py
src/infrastructure/agents/: __init__.py  langgraph_agent.py
