[project]
name = "ai-agents-examples"
version = "0.1.0"
description = "AI Agents examples"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.2.4",
    "agentevals>=0.0.7",
    "duckduckgo-search>=8.0.2",
    "fastapi[standard]>=0.115.12",
    "langchain-community>=0.3.24",
    "langchain-mcp-adapters>=0.1.0",
    "langchain[anthropic,google-genai,openai]>=0.3.25",
    "langgraph-supervisor>=0.0.22",
    "langgraph-swarm>=0.0.11",
    "langmem>=0.0.25",
    "pydantic>=2.11.4",
]


[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]
